<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
            http://maven.apache.org/POM/4.0.0
            https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!--
        Spring Boot parent quản lý phiên bản các thư viện Spring.
        Hai nhánh thống nhất dùng Spring Boot 3.5.16.
    -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <!-- Thông tin cơ bản của dự án -->
    <groupId>com.pharma</groupId>
    <artifactId>backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>backend</name>
    <description>Backend cho hệ thống PharmaPlus</description>

    <properties>
        <!--
            Code được biên dịch theo Java 21.
            Máy có thể cài Java mới hơn nhưng Maven vẫn tạo code tương thích Java 21.
        -->
        <java.version>21</java.version>
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <dependencies>

        <!--
            Spring Web:
            Dùng để tạo REST API, Controller, RequestMapping,
            GET, POST, PUT, DELETE và chạy Tomcat.
        -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!--
            Spring Data JPA:
            Dùng cho Entity, Repository, Hibernate và truy vấn database.
        -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!--
            Validation:
            Hỗ trợ @Valid, @NotNull, @NotBlank, @Size...
            trong DTO và Controller.
        -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!--
            Driver kết nối MySQL.
            Chỉ cần khi chạy ứng dụng nên dùng scope runtime.
        -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!--
            Lombok:
            Sinh getter, setter, constructor...
            giúp Entity và DTO ngắn gọn hơn.
        -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!--
            JWT API:
            Cung cấp các interface và class để tạo, đọc JWT.
        -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.13.0</version>
        </dependency>

        <!--
            Phần thực thi bên trong của thư viện JWT.
            Chỉ cần khi ứng dụng chạy.
        -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.13.0</version>
            <scope>runtime</scope>
        </dependency>

        <!--
            Giúp JWT chuyển đổi dữ liệu payload sang JSON
            và đọc JSON thành đối tượng Java.
        -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.13.0</version>
            <scope>runtime</scope>
        </dependency>

        <!--
            Thư viện kiểm thử tổng hợp của Spring Boot:
            JUnit, Mockito, Spring Test...
        -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Plugin để build và chạy ứng dụng Spring Boot -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <proc>full</proc>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>